Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,37 +39,178 @@
         <ul></ul>
       </nav>
       <section>
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h1>
+<a name="psql--pandas-awesomeness" class="anchor" href="#psql--pandas-awesomeness"><span class="octicon octicon-link"></span></a>PSQL + Pandas Awesomeness</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p><a href="http://pandas.pydata.org/">Pandas</a> is a popular library in Python that is commonly used for data analysis and it provides Python equivalent of the R dataframe that is fundamental to data analysis. Some engineers and data scientists however are increasingly adopting SQL based libraries for building large scale machine learning algorithms. <a href="http://madlib.net">MADlib</a> is one such library for scalable, parallel, in-database machine learning.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<p>While there are commercial tools to visualize data that reside in databases (example: Tableau), many a times it would be cool and convenient to be able to quickly visualize the output of a SQL query, without having to switch to a commercial tool or have to use a wrapper to a SQL engine. The pandas_via_psql project just demonstrates how simple it is to redirect the output of a SQL query to some boilerplate Pandas's plotting functions, to quickly visualize the data from the command line.</p>
+
+<h1>
+<a name="pre-requsites" class="anchor" href="#pre-requsites"><span class="octicon octicon-link"></span></a>Pre-Requsites</h1>
+
+<p>You'll need Pandas to be installed on your machine. You should also have <a href="http://www.postgresql.org/docs/8.1/static/app-psql.html">PSQL</a> or a similar SQL command line interface to connect to your database and also ensure that you have password-less access to your remote database (set up SSH keys appropriately).</p>
+
+<p>I recommend you download <a href="https://store.continuum.io/cshop/anaconda/">Anaconda Python</a> from the nice folks at <a href="http://continuum.io/">Continuum Analytics</a>. It's got most of the essential Python scientific computing libraries pre-packaged and with <a href="http://bokeh.pydata.org/">conda</a> you can save a lot of pain in installing python libraries. It also makes creating and managing virtual environments a piece of cake!</p>
+
+<h1>
+<a name="datasets-used" class="anchor" href="#datasets-used"><span class="octicon octicon-link"></span></a>Datasets Used</h1>
+
+<p>For this demo, I'm using two publicly available datasets. </p>
+
+<ul>
+<li>
+<a href="http://archive.ics.uci.edu/ml/datasets/Wine+Quality">The UCI wine quality dataset</a> - Here is a sampling of rows from this dataset:</li>
+</ul><pre><code>alcohol | mmalic_acid | ash  | alcalinity_of_ash | magnesium | total_phenols | flavanoids | nonflavanoid_phenols | proanthocyanins | color_intensity |  hue  | od280 | proline | quality 
+---------+-------------+------+-------------------+-----------+---------------+------------+----------------------+-----------------+-----------------+-------+-------+---------+---------
+       1 |       14.23 | 1.71 |              2.43 |      15.6 |           127 |        2.8 |                 3.06 |            0.28 |            2.29 |  5.64 |  1.04 |    3.92 |    1065
+       1 |        13.2 | 1.78 |              2.14 |      11.2 |           100 |       2.65 |                 2.76 |            0.26 |            1.28 |  4.38 |  1.05 |     3.4 |    1050
+       1 |       13.16 | 2.36 |              2.67 |      18.6 |           101 |        2.8 |                 3.24 |             0.3 |            2.81 |  5.68 |  1.03 |    3.17 |    1185
+       1 |       14.37 | 1.95 |               2.5 |      16.8 |           113 |       3.85 |                 3.49 |            0.24 |            2.18 |   7.8 |  0.86 |    3.45 |    1480
+       1 |       13.24 | 2.59 |              2.87 |        21 |           118 |        2.8 |                 2.69 |            0.39 |            1.82 |  4.32 |  1.04 |    2.93 |     735
+       1 |        14.2 | 1.76 |              2.45 |      15.2 |           112 |       3.27 |                 3.39 |            0.34 |            1.97 |  6.75 |  1.05 |    2.85 |    1450
+       1 |       14.39 | 1.87 |              2.45 |      14.6 |            96 |        2.5 |                 2.52 |             0.3 |            1.98 |  5.25 |  1.02 |    3.58 |    1290
+       1 |       14.06 | 2.15 |              2.61 |      17.6 |           121 |        2.6 |                 2.51 |            0.31 |            1.25 |  5.05 |  1.06 |    3.58 |    1295
+       1 |       14.83 | 1.64 |              2.17 |        14 |            97 |        2.8 |                 2.98 |            0.29 |            1.98 |   5.2 |  1.08 |    2.85 |    1045
+       1 |       13.86 | 1.35 |              2.27 |        16 |            98 |       2.98 |                 3.15 |            0.22 |            1.85 |  7.22 |  1.01 |    3.55 |    1045
+       1 |        14.1 | 2.16 |               2.3 |        18 |           105 |       2.95 |                 3.32 |            0.22 |            2.38 |  5.75 |  1.25 |    3.17 |    1510
+       1 |       14.12 | 1.48 |              2.32 |      16.8 |            95 |        2.2 |                 2.43 |            0.26 |            1.57 |     5 |  1.17 |    2.82 |    1280
+       1 |       13.75 | 1.73 |              2.41 |        16 |            89 |        2.6 |                 2.76 |            0.29 |            1.81 |   5.6 |  1.15 |     2.9 |    1320
+       1 |       14.75 | 1.73 |              2.39 |      11.4 |            91 |        3.1 |                 3.69 |            0.43 |            2.81 |   5.4 |  1.25 |    2.73 |    1150
+       1 |       14.38 | 1.87 |              2.38 |        12 |           102 |        3.3 |                 3.64 |            0.29 |            2.96 |   7.5 |   1.2 |       3 |    1547
+       1 |       13.63 | 1.81 |               2.7 |      17.2 |           112 |       2.85 |                 2.91 |             0.3 |            1.46 |   7.3 |  1.28 |    2.88 |    1310
+
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<ul>
+<li>
+<a href="http://finance.yahoo.com/q/hp?s=%5EGSPC+Historical+Prices">The S&amp;P daily prices dataset</a> - Here is a sampling of rows from this dataset:</li>
+</ul><pre><code>     dt     |  open   |  high   |   low   |  close  |   volume   | adj_close 
+------------+---------+---------+---------+---------+------------+-----------
+ 2013-09-27 | 1695.52 | 1695.52 | 1687.11 | 1691.75 | 2951700000 |   1691.75
+ 2012-04-23 | 1378.53 | 1378.53 | 1358.79 | 1366.94 | 3654860000 |   1366.94
+ 2012-01-18 | 1293.65 | 1308.11 | 1290.99 | 1308.04 | 4096160000 |   1308.04
+ 2011-09-07 | 1165.85 | 1198.62 | 1165.85 | 1198.62 | 4441040000 |   1198.62
+ 2011-06-03 | 1312.94 | 1312.94 |  1297.9 | 1300.16 | 3505030000 |   1300.16
+ 2011-03-31 | 1327.44 | 1329.77 | 1325.03 | 1325.83 | 3566270000 |   1325.83
+ 2010-12-28 |  1259.1 |  1259.9 | 1256.22 | 1258.51 | 2478450000 |   1258.51
+ 2010-09-23 |  1131.1 | 1136.77 | 1122.79 | 1124.83 | 3847850000 |   1124.83
+ 2010-07-21 | 1086.67 | 1088.96 | 1065.25 | 1069.59 | 4747180000 |   1069.59
+ 2010-05-13 | 1170.04 | 1173.57 | 1156.14 | 1157.44 | 4870640000 |   1157.44
+ 2010-03-10 | 1140.22 | 1148.26 | 1140.09 | 1145.61 | 5469120000 |   1145.61
+ 2009-12-04 | 1100.43 | 1119.13 | 1096.52 | 1105.98 | 5781140000 |   1105.98
+ 2009-07-24 |  972.16 |  979.79 |  965.95 |  979.26 | 4458300000 |    979.26
+ 2009-02-09 |  868.24 |  875.01 |  861.65 |  869.89 | 5574370000 |    869.89
+ 2008-11-05 | 1001.84 | 1001.84 |  949.86 |  952.77 | 5426640000 |    952.77
+ 2008-09-02 | 1287.83 | 1303.04 |  1272.2 | 1277.58 | 4783560000 |   1277.58
+ 2008-04-30 | 1391.22 | 1404.57 | 1384.25 | 1385.59 | 4508890000 |   1385.59
+ 2008-01-25 | 1357.32 | 1368.56 |  1327.5 | 1330.61 | 4882250000 |   1330.61
+ 2007-09-14 | 1483.95 | 1485.99 | 1473.18 | 1484.25 | 2641740000 |   1484.25
+</code></pre>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<h1>
+<a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h1>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>Invoke Pandas plotting functions by piping in the output from a psql query.
+You can re-use this boiler-plate code for Scatter Plots, Box Plots, Histograms and Time Series Plots on your tables.</p>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<h1>
+<a name="scatter-matrix" class="anchor" href="#scatter-matrix"><span class="octicon octicon-link"></span></a>Scatter Matrix</h1>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>This is pretty useful when you are interested in analyzing the correlation between a bunch of features in a dataset, particularly in their correlation with the target attribute/label. You might then perform feature selection based on a visual output of the correlations.</p>
 
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<p>Here is how the scatter matrix can be created on the UCI Wine Quality Dataset</p>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<pre><code>home$ psql -d vatsandb -h dca -U gpadmin -c 'select * from wine;' | python plotter.py scatter
+</code></pre>
 
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<p>Here is the output <img src="https://raw2.github.com/vatsan/pandas_via_psql/master/plots/scatter_matrix.png" alt="Scatter Matrix of all features from the Wine Quality Dataset"></p>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<h1>
+<a name="hexbin-plots" class="anchor" href="#hexbin-plots"><span class="octicon octicon-link"></span></a>Hexbin Plots</h1>
+
+<p>Scatter plots sometimes may not reveal the underlying relationship between the dimensions when multiple points overlap.
+For this reason, it is better to look at a 2-d histogram or a hex-bin plot. We can tap into <code>matplotlib's</code> hexbin plot for this.</p>
+
+<p>You could invoke it from your command line like so:</p>
+
+<pre><code>home$ psql -d vatsandb -h dca -U gpadmin -c 'select ash, flavanoids from wine;' | python plotter.py hexbin
+</code></pre>
+
+<p>Here is the output <img src="https://raw2.github.com/vatsan/pandas_via_psql/master/plots/hexbin.png" alt="Hexbin plot of Ash vs. Flavanoids from Wine Quality Dataset"></p>
+
+<h1>
+<a name="histogram-plot" class="anchor" href="#histogram-plot"><span class="octicon octicon-link"></span></a>Histogram Plot</h1>
+
+<p>To get a quick glimpse of the distribution of the data in your columns, a histogram plot of all columns is quite useful.</p>
+
+<p>You could invoke it from your command line like so:</p>
+
+<pre><code>home$ psql -d vatsandb -h dca -U gpadmin -c 'select ash, flavanoids, hue, proline from wine;' | python plotter.py hist
+</code></pre>
+
+<p>Here is the output 
+<img src="https://raw2.github.com/vatsan/pandas_via_psql/master/plots/histogram.png" alt="Histogram Plots of some features from the Wine Quality Dataset"></p>
+
+<h1>
+<a name="density-plot" class="anchor" href="#density-plot"><span class="octicon octicon-link"></span></a>Density Plot</h1>
+
+<p>In place of binning your data, you might consider plotting the density directly. </p>
+
+<p>You could invoke it from your command line like so:</p>
+
+<pre><code>home$ psql -d vatsandb -h dca -U gpadmin -c 'select ash, flavanoids, hue, proline from wine;' | python plotter.py density
+</code></pre>
+
+<p>Here is the output <img src="https://raw.github.com/vatsan/pandas_via_psql/master/plots/density.png" alt="Density Plots of some features from the Wine Quality Dataset"></p>
+
+<h1>
+<a name="box-plot" class="anchor" href="#box-plot"><span class="octicon octicon-link"></span></a>Box Plot</h1>
+
+<p>Box plots are useful in visually getting a feel for the quartile ranges of numerical columns in your dataset. You could invoke it from your command line like so:</p>
+
+<pre><code>home$ psql -d vatsandb -h dca -U gpadmin -c 'select ash, flavanoids, hue, proline from wine;' | python plotter.py box
+</code></pre>
+
+<p>Here is the output <img src="https://raw2.github.com/vatsan/pandas_via_psql/master/plots/boxplot.png" alt="Box Plot of some features from the Wine Quality Dataset"></p>
+
+<h1>
+<a name="time-series-plot" class="anchor" href="#time-series-plot"><span class="octicon octicon-link"></span></a>Time Series Plot</h1>
+
+<p>Again, Pandas has an impressive collection of functions for time series analysis but to quickly visualize a time series, you can run the following from your command line:</p>
+
+<pre><code>home$ psql -d vatsandb -h dca -U gpadmin -c 'select dt, high, low  from sandp_prices where dt &gt; 1998 order by dt;' | python plotter.py tseries
+</code></pre>
+
+<p>Here is the output <img src="https://raw2.github.com/vatsan/pandas_via_psql/master/plots/time_series.png" alt="Time Series Plotting of S&amp;P"></p>
+
+<h1>
+<a name="image-rendering" class="anchor" href="#image-rendering"><span class="octicon octicon-link"></span></a>Image Rendering</h1>
+
+<p>Pandas also has a great set of tools for viewing images: grayscale or RGB, which can be quite handy when working on image processing or computer vision in SQL. For example, to check a binary mask after thresholding or the weights output by a deep learning algorithm, it is much easier to visualize an image than to interpret a table of intensity values.
+To view an image whose intensity values are stored in a table, simply select the height and width of the image (number of rows &amp; columns) followed by a vector of intensity values ordered by row, then column. For example, to view this 270x360 pixel grayscale image, you can run the following from your command line:</p>
+
+<pre><code>home$ psql -d vatsandb -h dca -U gpadmin -c 'select 270 as rows, 360 as cols, intensity_values from sample_image;' | python plotter.py image
+</code></pre>
+
+<p>Here is the output <img src="https://raw.githubusercontent.com/ailey/pandas_via_psql/master/plots/YosemiteGrayscale.jpg" alt="Sample Grayscale image"></p>
+
+<p>Similarly, to view an RGB image, provide the image height and width followed by a vector of intensity values ordered by row, then column, then color. To view a sample RGB image you can run the following from your command line:</p>
+
+<pre><code>home$ psql -d vatsandb -h dca -U gpadmin -c 'select max(row)+1, max(col)+1, array[array_agg(red_intensity order by row,col), array_agg(green_intensity order by row,col), array_agg(blue_intensity order by row,col)] from (select * from sample_RGB_image order by row,col)t;' | python plotter.py imageRGB
+</code></pre>
+
+<p>Here is the output <img src="https://raw.githubusercontent.com/ailey/pandas_via_psql/master/plots/YosemiteRGB.jpeg" alt="Sample RGB image"></p>
+
+<h1>
+<a name="author" class="anchor" href="#author"><span class="octicon octicon-link"></span></a>Author</h1>
+
+<p>Please email questions and feedback to <a href="https://github.com/vatsan/">Srivatsan Ramanujam</a> at <a href="mailto:vatsan.cs@utexas.edu">vatsan.cs@utexas.edu</a></p>
+
+<h1>
+<a name="contributors" class="anchor" href="#contributors"><span class="octicon octicon-link"></span></a>Contributors</h1>
+
+<p>Thanks to <a href="https://github.com/ailey">Ailey Crow</a> and <a href="https://github.com/gautamsm">Gautam Muralidhar</a> for their contributions.</p>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/vatsan">vatsan</a></p>
